[gd_scene load_steps=31 format=3 uid="uid://bouliy1de7hlo"]

[ext_resource type="Script" uid="uid://d4c5hr3o8qcv2" path="res://game/scripts/player/player.gd" id="1_0s8a0"]
[ext_resource type="Texture2D" uid="uid://cgyguvgs0mltu" path="res://asset/character/delta.png" id="2_1v6wv"]
[ext_resource type="Shader" uid="uid://cvxacan768xjj" path="res://asset/shader/player.gdshader" id="2_alwld"]
[ext_resource type="Script" uid="uid://cywr5kt21wqk" path="res://game/scripts/Manager/input_move.gd" id="4_o5jij"]
[ext_resource type="AudioStream" uid="uid://bxxm5ccwmpnp5" path="res://asset/audio/laser7.ogg" id="5_fitlj"]
[ext_resource type="AudioStream" uid="uid://c73cply51svcp" path="res://asset/audio/phaseJump5.ogg" id="6_rn0mw"]
[ext_resource type="AudioStream" uid="uid://geo7p0qg5d6v" path="res://asset/audio/highUp.ogg" id="7_4h2nh"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_d1q5r"]
shader = ExtResource("2_alwld")
shader_parameter/color = Color(1, 0.407246, 0.338652, 1)
shader_parameter/flash_state = 0.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5tw5p"]
resource_local_to_scene = true
size = Vector2(8, 11)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fgyv8"]
size = Vector2(8, 6)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nusw8"]
size = Vector2(8, 9)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gq5gu"]
size = Vector2(8, 4)

[sub_resource type="Animation" id="Animation_hr4iw"]
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_4fyhu"]
resource_name = "air"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [50]
}

[sub_resource type="Animation" id="Animation_iutns"]
resource_name = "climb"
length = 0.3
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [80, 81, 82]
}

[sub_resource type="Animation" id="Animation_xki8w"]
resource_name = "duck"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [90]
}

[sub_resource type="Animation" id="Animation_x2v36"]
resource_name = "fall"
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [50]
}

[sub_resource type="Animation" id="Animation_7yka0"]
resource_name = "grab"
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [70]
}

[sub_resource type="Animation" id="Animation_qln8l"]
resource_name = "idle1"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.266667, 0.5, 0.766667),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_a53va"]
resource_name = "idle2"
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [10, 11, 12, 13]
}

[sub_resource type="Animation" id="Animation_iqkx4"]
resource_name = "idle3"
length = 5.0
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.2, 3.4, 3.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [20, 21, 24, 25]
}

[sub_resource type="Animation" id="Animation_8mv6u"]
resource_name = "jump_up"
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [40]
}

[sub_resource type="Animation" id="Animation_6hiim"]
resource_name = "run"
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [30, 31, 32, 33, 34, 35, 36, 37, 38, 39]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hkmnd"]
_data = {
&"RESET": SubResource("Animation_hr4iw"),
&"air": SubResource("Animation_4fyhu"),
&"climb": SubResource("Animation_iutns"),
&"duck": SubResource("Animation_xki8w"),
&"fall": SubResource("Animation_x2v36"),
&"grab": SubResource("Animation_7yka0"),
&"idle1": SubResource("Animation_qln8l"),
&"idle2": SubResource("Animation_a53va"),
&"idle3": SubResource("Animation_iqkx4"),
&"jump_up": SubResource("Animation_8mv6u"),
&"run": SubResource("Animation_6hiim")
}

[sub_resource type="Curve" id="Curve_x13bp"]
_limits = [-1.0, 1.0, 0.0, 1.0]
_data = [Vector2(0.00793651, -0.901887), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_2qemj"]
curve = SubResource("Curve_x13bp")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_r0lh5"]
particle_flag_disable_z = true
spread = 180.0
angular_velocity_min = 20.0
angular_velocity_max = 20.0
radial_velocity_min = 20.0
radial_velocity_max = 20.0
gravity = Vector3(0, 0, 0)
radial_accel_min = -20.0
radial_accel_max = -2.23517e-06
scale_min = 3.0
scale_max = 3.0
hue_variation_min = -2.23517e-08
hue_variation_max = 0.02
hue_variation_curve = SubResource("CurveTexture_2qemj")

[sub_resource type="Animation" id="Animation_mpxkx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:material:shader_parameter/color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 0.407246, 0.338652, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerSprite:material:shader_parameter/flash_state")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_8p5ng"]
resource_name = "tire"
length = 0.3
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:material:shader_parameter/color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 0.407246, 0.338652, 1), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerSprite:material:shader_parameter/flash_state")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 1.0, 0.0, 1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2278h"]
_data = {
&"RESET": SubResource("Animation_mpxkx"),
&"tire": SubResource("Animation_8p5ng")
}

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("sprite")]
collision_mask = 394
script = ExtResource("1_0s8a0")
sprite = NodePath("PlayerSprite")

[node name="PlayerSprite" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_d1q5r")
texture = ExtResource("2_1v6wv")
hframes = 10
vframes = 10
region_rect = Rect2(0, 0, 32, 32)

[node name="NormalCollision" type="CollisionShape2D" parent="."]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_5tw5p")

[node name="DuckCollision" type="CollisionShape2D" parent="."]
position = Vector2(0, 3)
shape = SubResource("RectangleShape2D_fgyv8")

[node name="NormalHurtbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="NormalHurtbox"]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_nusw8")
debug_color = Color(0.909335, 0.265106, 0.360163, 0.42)

[node name="DuckHurtbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="DuckHurtbox"]
position = Vector2(0, 2)
shape = SubResource("RectangleShape2D_gq5gu")
debug_color = Color(0.909804, 0.266667, 0.360784, 0.419608)

[node name="UnduckCheckBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="NormalCollision" type="CollisionShape2D" parent="UnduckCheckBox"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_5tw5p")

[node name="InputMove" type="Node2D" parent="."]
process_mode = 3
script = ExtResource("4_o5jij")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_hkmnd")
}

[node name="DeadParticles" type="GPUParticles2D" parent="."]
z_index = 1
z_as_relative = false
emitting = false
amount = 10
process_material = SubResource("ParticleProcessMaterial_r0lh5")
one_shot = true
speed_scale = 1.2
explosiveness = 1.0

[node name="AnimationEffect" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_2278h")
}

[node name="DeadSFX" type="AudioStreamPlayer" parent="."]
process_mode = 3
stream = ExtResource("5_fitlj")
mix_target = 2
bus = &"SFX"

[node name="JumpSFX" type="AudioStreamPlayer" parent="."]
process_mode = 3
stream = ExtResource("6_rn0mw")
mix_target = 2
bus = &"SFX"

[node name="DashSFX" type="AudioStreamPlayer" parent="."]
process_mode = 3
stream = ExtResource("7_4h2nh")
bus = &"DashSFX"

[connection signal="body_entered" from="NormalHurtbox" to="." method="_on_collide_hurt"]
[connection signal="body_entered" from="DuckHurtbox" to="." method="_on_collide_hurt"]
